--- a/1.7summary.md
+++ b/1.7summary.md
@@ -1,2 +1,1 @@
-先和大家一起学习了Go中函数相关知识，如函数定义、作用域变量、函数类型、匿名函数和闭包等。之后，自己对前面几天所讲不理解的部分，如切片、遍历range、map、结构体struct进行了巩固学习，对着相关程序块，进行了理解编译。还对Git的分支管理和标签管理进行了了解学习，知道了分支推送以及标签的git命令。
-但对map、range还是有地方未弄懂，map在哪运用，range遍历的for循环看不懂。
+&emsp;&emsp;先和大家一起学习了Go中函数相关知识，如函数定义、作用域变量、函数类型、匿名函数和闭包等。之后，自己对前面几天所讲不理解的部分，如切片、遍历range、map、结构体struct进行了巩固学习，对着相关程序块，进行了理解编译。还对Git的分支管理和标签管理进行了了解学习，知道了分支推送以及标签的git命令。但对map、range还是有地方未弄懂，map在哪运用，range遍历的for循环看不懂。
