--- a/1.9golearn.md
+++ b/1.9golearn.md
@@ -152,7 +152,7 @@ func main() {
 
         fmt.Println(x, y, x+y)
 }
-//通道可以避免
+//通道可以避免在另一个goroutine中函数执行的较慢，而主函数停止时，其未执行完的情况。
 package main
 
 import (
