--- a/1.8summary.md
+++ b/1.8summary.md
@@ -1,2 +1,3 @@
-早上和大家学习了GO语言中的接口与方法，方法即为一个包含了接受者的函数，接口是包含了所有具有共性的方法的数据类型。经过半天对相关小程序的验证，了解了方法与接口的初步运用。
-下午学习了Git的最后一部分，即关于忽略特殊文件，配置别名以及sourcetree的知识点，基本学完了版本控制的基本命令。
+&emsp;&emsp;早上和大家学习了GO语言中的接口与方法，方法即为一个包含了接受者的函数，接口是包含了所有具有共性的方法的数据类型。经过半天对相关小程序的验证，了解了方法与接口的初步运用。
+<br/>
+&emsp;&emsp;下午学习了Git的最后一部分，即关于忽略特殊文件，配置别名以及sourcetree的知识点，基本学完了版本控制的基本命令。
