--- a/the second week/1.11summary.md
+++ b/the second week/1.11summary.md
@@ -1,3 +1,3 @@
 &emsp;&emsp;早上学习了go中并发的相关内容，了解了goroutine和通道的知识点，对上个星期不懂的问题，与前辈进行了讨论，并解决了问题。之后，复习了通道的知识，查看了几个代码块。
 <br/>
-&emsp;&emsp;之后去了解了数据库的基本知识，如数据库（Database）是按照数据结构来组织、存储和管理数据的仓库，以及一些术语列，行，冗余等。装好了postgreSQL数据库。对数据库具体操作还是不懂，还要继续学习。
+&emsp;&emsp;之后去了解了数据库的基本知识，如数据库（Database）是按照数据结构来组织、存储和管理数据的仓库，以及一些术语列，行，冗余等。也了解了下postgreSQL的基本命令如ABORT、ALTER AGGREGATE等以及postgreSQL数据类型，但类型太多，没有看完。之后，装好了postgreSQL数据库。对数据库具体操作还是不懂，还要继续学习。
