--- a/the-fifth-week/2.1summary.md
+++ b/the-fifth-week/2.1summary.md
@@ -1,2 +1,2 @@
-<h3>日小结</h3>
+<center><h3>日小结</h3></center>
 &emsp;&emsp;早上周修改的函数完善了下，之后将团队成员的代码拉了下来，将功能函数用postman进行了测试，测试全部通过，下午将完整的代码拉下来，遇到了冲突，冲突原因是我引用了Go扩展工具包，而团队成员没有引用，所以合并之后就可以拉下来了，之后进行了swagger调试，但ubuntu系统上，make swagger一直在报错，还未找到解决方法，晚上学了会儿模板引擎，了解了模板自定义函数，继承模板等等。
