--- a/the-fifth-week/2.2summary.md
+++ b/the-fifth-week/2.2summary.md
@@ -1,3 +1,3 @@
 <center><h3>日小结</h3></center>
 <br></br>
-&emsp;&emsp;早上我们小组开会讨论了接下来要处理的问你，我分配到的任务是添加部门的函数以及答案链接的增删改查，下午就在写这五个接口函数，虽然蛮简单的，但总感觉有点不妥，和前面的有些接口关联不上。晚上写完了五个接口函数，但还未调试。
+&emsp;&emsp;早上我们小组开会讨论了接下来要处理的问题，我分配到的任务是添加部门的函数以及答案链接的增删改查，下午就在写这五个接口函数，虽然蛮简单的，但总感觉有点不妥，和前面的有些接口关联不上。晚上写完了五个接口函数，但还未调试。
