--- a/daily-summary/the-nineth-week/3.15sum.md
+++ b/daily-summary/the-nineth-week/3.15sum.md
@@ -1,4 +1,4 @@
-<center><h3>日结与明日工作规划</h3></center>
-<br></br>
+&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<h3>日结与明日工作规划</h3>
+<br/>
 &emsp;&emsp;今天开始要写message的测试代码，但是在写了一部分后，感觉不是太懂，于是转向去学习了grpc的官方文档，初步了解了这个框架以及protocol buffer数据转换格式，以后用到时就能直接去学习用法就行了。
 &emsp;&emsp;明日自我安排是将测试代码写完，不要写一会儿就去学习其他的了，要在写代码中学习所需要的框架知识。写完测试后可以去了解下Docker。
