--- a/daily-summary/the-nineth-week/3.16sum.md
+++ b/daily-summary/the-nineth-week/3.16sum.md
@@ -1,4 +1,4 @@
 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<h3>日结与明日工作规划</h3>
 <br/>
-&emsp;&emsp;今日仿照mqtt的测试代码写了大部分的测试代码，但是发觉我的情况有些不一样，所以没有能够写完。对于Docker也只看了一点介绍，没有了解大部分，所以今天算是没有完成昨天的安排。
+&emsp;&emsp;今日仿照mqtt的测试代码写了大部分的测试代码，但是发觉我的情况有些不一样，所以没有能够写完。对于Docker也只看了一点介绍，没有了解大部分，所以今天算是没有完成昨天的安排。<br/>
 &emsp;&emsp;明日就测试代码询问下功能是否写对和测试代码怎么写；之后将Docker的官方文档了解下。再就修改message的代码bug。
