--- a/daily-summary/the-ten-week/3.22sum.md
+++ b/daily-summary/the-ten-week/3.22sum.md
@@ -1,4 +1,5 @@
-&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<h3>日结与明日工作规划</h3>
+<center><h3>日结与明日工作规划</h3></center>
 <br/>
 &emsp;&emsp;将不同情况的定时功能都尝试了下，但是都未成功，所以就认为前两周写的函数方向基本错了，所以明天开始调整改道吧，下午跟着去现场调试。
-&emsp;&emsp;把定时功能解决，并把websocket融入到里面，试试自己的相法，有时间再继续go web 编程。
+<br/>
+&emsp;&emsp;把定时功能解决，并把websocket融入到里面，试试自己的想法，有时间再继续看go web 编程。
