--- a/daily-summary/the-ten-week/3.25sum.md
+++ b/daily-summary/the-ten-week/3.25sum.md
@@ -1,5 +1,5 @@
-<center><h3>日结与明日工作规划</h3></center>
+<center>日结与明日工作规划</center>
 <br/>
-&emsp;&emsp;了解到swagger无法测试web socket,已经完成插件功能的书写，基本任务算完成。
+&emsp;&emsp;测试代码的书写三方包有很多，在考虑自己的测试需不需要用三方包，基本写完了，但不了解VScode的调试功能，于是学习了调试，最后看了下go web 编程的第三章。
 <br/>
-&emsp;&emsp;继续写测试功能，有时间再继续学习go web编程
+&emsp;&emsp;调试测试代码，了解代码覆盖率，有时间继续学。
